--- a/app/src/main/res/menu/bottomappbar_menu.xml
+++ b/app/src/main/res/menu/bottomappbar_menu.xml
@@ -4,4 +4,12 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings" />
+    <item
+        android:id="@+id/action_undo"
+        android:orderInCategory="98"
+        android:title="@string/action_undo" />
+    <item
+        android:id="@+id/action_redo"
+        android:orderInCategory="99"
+        android:title="@string/action_redo" />
 </menu>
